# MuddyBot

./: CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
docs/: service.md  usage.md
src/muddybot/: __main__.py  files.py  gen_key.py  logger.py  twitch_bot.py
src/twitch_bot/: __main__.py  files.py  logger.py  twitch_bot.py
