[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/muddybot/__main__.py"

[project]
dynamic = ['version']
name = "muddybot"
description = "A twitch bot that is mainly used to find a word in twitch chat :)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["twitch", "chat", "bot"]
requires-python = ">= 3.8"
dependencies = [
    "twitchio==2.10.0",
    "cryptography"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Hatch",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: System :: Logging",
    "Typing :: Typed"
]
authors = [
  {name = "TheCrunching", email = "theCrunching@proton.me"}
]
maintainers = [
  {name = "TheCrunching", email = "theCrunching@proton.me"}
]

[project.urls]
Homepage = "https://github.com/TheCrunching/python-twitch-bot"
Download = "https://github.com/TheCrunching/MuddyBot/releases"
Changelog = "https://github.com/TheCrunching/python-twitch-bot/blob/main/CHANGELOG.md"
Documentation = "https://github.com/TheCrunching/python-twitch-bot/blob/main/README.md"
Bug = "https://github.com/TheCrunching/MuddyBot/issues"
repository = "https://github.com/TheCrunching/python-twitch-bot"

[project.scripts]
muddybot = "muddybot.__main__:main"
muddybot-key = "muddybot.gen_key:main"